# index_permute

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench_parallel.rs
src/: lib.rs  macro_rules.rs
