[package]
name = "index_permute"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/shenjiangqiu/index_permute"
description = "A library for permuting a slice which elements are not Clone or Copy in Rust"
authors = ["Jiangqiu Shen <ivy22233@live.com>"]
license = "MIT OR Apache-2.0"
[dependencies]
thiserror = "2.0.12"

[features]

default = ["parallel"]
parallel = []
