[package]
name = "index_permute"
version = "0.1.11"
edition = "2024"
repository = "https://github.com/shenjiangqiu/index_permute"
description = "A library for permuting a slice which elements are not Clone or Copy in Rust"
authors = ["Jiangqiu Shen <ivy22233qiu@live.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
num_cpus = { version = "1.17.0", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9.2"
criterion = "0.6.0"

[features]
default = []
parallel = ["num_cpus"]

[[bench]]
name = "bench_parallel"
harness = false

